--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,10 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-/*test font*/
-@import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap');
-
-body {
-	font-family: "Darumadrop", sans-serif;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 /* attempt to modify caret size */
 .custom-arrow .collapse-title::before {
