--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,10 @@
 }
 
 .faq-box-hover:hover {
-	background-color: #410091; /* Lighter purple */
+	background-color: #410091; 
 	box-shadow: 0 0 10px #b794f4, 0 0 20px #b794f4, 0 0 30px #d8b4fe;
 	transition: background-color 0.3s ease, box-shadow 0.3s ease;
   }
-
 
 :root,
 [data-amplify-theme] {
